--- a/client/src/app/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/pages/dashboard/dashboard.component.scss
@@ -1,8 +1,4 @@
-.dashboard-container {
-    padding: 24px;
-    background-color: #f0f2f5;
-    min-height: 100vh;
-}
+.dashboard-container {}
 
 .charts-row {
     margin-top: 24px;
