--- a/client/src/app/pages/manager-dashboard/manager-dashboard.component.scss
+++ b/client/src/app/pages/manager-dashboard/manager-dashboard.component.scss
@@ -1,8 +1,4 @@
-.manager-dashboard-container {
-    padding: 24px;
-    background-color: #f0f2f5;
-    min-height: 100vh;
-}
+.manager-dashboard-container {}
 
 .filters {
     margin-bottom: 16px;
