feat(issues): implement view issue details for employees

--- a/client/src/app/components/issue-details-drawer/issue-details-drawer.component.html
+++ b/client/src/app/components/issue-details-drawer/issue-details-drawer.component.html
@@ -23,7 +23,7 @@
                 </nz-descriptions-item>
             </nz-descriptions>
 
-            <div class="actions-section">
+            <div class="actions-section" *ngIf="isManager">
                 <h3>Management Actions</h3>
 
                 <div class="action-group">
